Add updateCat func
